--- a/Receitas.html
+++ b/Receitas.html
@@ -335,7 +335,7 @@
 
     <footer>
         <p class="footer-container">Copyright &lt;CODECOFFEE /&gt; 2024</p>
-        <p class="footer-content">Feito com muito 🤍 e café por Ignacio Neto</p>
+        <p class="footer-content">Feito com muito 🤍 e café por rafael ferraz</p>
     </footer>
 
 
